syntax = "proto3";

package pb;
option go_package = "./pb";

import "google/protobuf/empty.proto";
import "base.proto";


message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
  string address = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message UserResponse {
  pb.BaseResponse response = 1;
  User user = 2;
}

message UserListResponse {
  pb.BaseResponse response = 1;
  repeated User users = 2;
}

message UserRequest {
  string id = 1;
}

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc ListUsers (google.protobuf.Empty) returns (UserListResponse);
  rpc CreateUser (User) returns (pb.BaseResponse);
  rpc UpdateUser (User) returns (pb.BaseResponse);
  rpc DeleteUser (UserRequest) returns (pb.BaseResponse);
}